Remover um estabelecimento a partir da tela de informações do estabelecimento Remover um estabelecimento a partir da menu dos meus favoritos Acessar um estabelecimento a partir da menu dos meus favoritos Acessar um serviço a partir da tela de informações do estabelecimento Ligar para um estabelecimento a partir da menu dos meus favoritos Alteração dos ícones da tela de informações do estabelecimento(favoritar, avaliar e avaliações) Alteração dos ícones dos botões da tela de informações de um serviço

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,6 +131,8 @@
     <string name="estabelecimento_desfavoritado">Estalecimento removido dos favoritos!</string>
     <string name="estabelecimento_existente">Estalecimento já favoritado!</string>
     <string name="pergunta_confirma_remocao_favorito">O estabelecimento será removido dos favoritos. Confirma?</string>
+    <string name="pergunta_confirma_ligacao_favorito">Essa ligação pode gerar custos adicionais. Confirma?</string>
+    <string name="ligando_favorito">Discando...</string>
 
     <!--Strings relacionadas ao estbelecimento-->
     <string name="estabelecimento">Estabelecimento:</string>
